--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "highcharts": "^10.3.3",
     "mdb-react-ui-kit": "^5.1.0",
     "react": "^18.2.0",
     "react-awesome-modal": "^2.0.5",
@@ -18,7 +19,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-modal": "^3.16.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "sass": "^1.60.0",
     "web-vitals": "^2.1.4"
   },
