--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.3.6",
     "bootstrap": "^5.2.3",
     "highcharts": "^10.3.3",
+    "jsonwebtoken": "^9.0.0",
     "mdb-react-ui-kit": "^5.1.0",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "react": "^18.2.0",
     "react-awesome-modal": "^2.0.5",
     "react-bootstrap": "^2.7.2",
@@ -22,6 +24,7 @@
     "react-modal": "^3.16.1",
     "react-scripts": "^5.0.1",
     "sass": "^1.60.0",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -49,6 +52,17 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.10.0"
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
+    "react-app-rewired": "^2.2.1",
+    "react-router-dom": "^6.10.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.0",
+    "webpack": "^5.81.0"
   }
 }
