--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-helmet-async": "^1.3.0",
     "react-modal": "^3.16.1",
     "react-scripts": "^5.0.1",
+    "react-to-print": "^2.14.12",
     "sass": "^1.60.0",
     "util": "^0.12.5",
     "web-vitals": "^2.1.4"
