--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.6",
     "bootstrap": "^5.2.3",
+    "exceljs": "^4.3.0",
     "highcharts": "^10.3.3",
     "jsonwebtoken": "^9.0.0",
     "mdb-react-ui-kit": "^5.1.0",
@@ -19,6 +20,7 @@
     "react": "^18.2.0",
     "react-awesome-modal": "^2.0.5",
     "react-bootstrap": "^2.7.2",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-modal": "^3.16.1",
@@ -26,7 +28,9 @@
     "react-to-print": "^2.14.12",
     "sass": "^1.60.0",
     "util": "^0.12.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
+    "xlsx-populate": "^1.21.0"
   },
   "scripts": {
     "start": "react-scripts start",
