--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "react": "^18.2.0",
     "react-awesome-modal": "^2.0.5",
     "react-bootstrap": "^2.7.2",
-    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-modal": "^3.16.1",
@@ -28,9 +27,7 @@
     "react-to-print": "^2.14.12",
     "sass": "^1.60.0",
     "util": "^0.12.5",
-    "web-vitals": "^2.1.4",
-    "xlsx": "^0.18.5",
-    "xlsx-populate": "^1.21.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
